--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tailwindcss/line-clamp": "^0.4.0",
-    "storyblok-rich-text-react-renderer": "^2.5.4",
+    "@react-pdf/renderer": "^3.1.14",
     "@storyblok/react": "^2.4.7",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "next": "^12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "storyblok-rich-text-react-renderer": "^2.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
